--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TestRegisFireBase</string>
+    <string name="application_name">Creators Laboratory</string>
 </resources>
