--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="application_name">Creators Laboratory</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="signup">Don't have an account? Sign Up now!</string>
+    <string name="signup">Don\'t have an account? Sign Up now!</string>
     <string name="login">Already have an account? Login Now!</string>
 </resources>
